--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
