--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.6.7",
     "validator": "^13.9.0"
   },
