--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "srce": "./index.js",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
